fix: added listener

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-sqlite3": "^11.9.1",
     "discord.js-selfbot-v13": "^3.6.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "quick.db": "^9.1.7"
   }
 }
